--- a/Counter/style.css
+++ b/Counter/style.css
@@ -18,4 +18,7 @@ button {
     margin-top: 30px;
     font-size: larger;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    border-radius: 7px;
+    background-color: rgb(226, 224, 224);
+    border-color: rgb(226, 224, 224);
 }
